# soroban-tools

./: Cargo.toml  Makefile  README.md  RELEASING.md  go.mod  go.sum
.github/: CODEOWNERS
.github/actions/setup-integration-tests/: action.yml
.github/workflows/: bump-version.yml  dependency-check.yml  e2e.yml  full-help-docs.yml  publish.yml  rust-version.yml  rust.yml  soroban-rpc.yml  update-completed-sprint-on-issue-closed.yml
cmd/crates/soroban-spec-json/: Cargo.toml
cmd/crates/soroban-spec-json/src/: lib.rs  types.rs
cmd/crates/soroban-spec-tools/: Cargo.toml
cmd/crates/soroban-spec-tools/src/: lib.rs  utils.rs
cmd/crates/soroban-spec-typescript/: Cargo.toml
cmd/crates/soroban-spec-typescript/src/: boilerplate.rs  lib.rs  types.rs
cmd/crates/soroban-spec-typescript/ts-tests/: initialize.sh  package-lock.json  package.json
cmd/crates/soroban-test/: Cargo.toml
cmd/crates/soroban-test/tests/fixtures/test-wasms/custom_type/: Cargo.toml
cmd/deptool/: scanner.go
cmd/soroban-cli/: Cargo.toml  README.md
cmd/soroban-cli/src/: key.rs  toid.rs  utils.rs
cmd/soroban-cli/src/commands/: events.rs  mod.rs  version.rs
cmd/soroban-cli/src/rpc/: mod.rs  txn.rs
cmd/soroban-rpc/: README.md  main.go
cmd/soroban-rpc/docker/: Dockerfile  Dockerfile.release  Makefile
cmd/soroban-rpc/internal/: jsonrpc.go
cmd/soroban-rpc/internal/config/: config.go  config_option.go  config_test.go  options.go  parse.go  test.soroban.rpc.config  toml_test.go
docs/: MONITORING.md  soroban-cli-full-docs.md
scripts/: check-dependencies.bash
(+84 files in other folders)
