[package]
name = "soroban-spec-tools"
description = "Tools for using a contract's XDR spec"
homepage = "https://github.com/shantanu-hashcash/soroban-tools"
repository = "https://github.com/shantanu-hashcash/soroban-tools"
authors = ["Hcnet Development Foundation <info@hcnet.org>"]
license = "Apache-2.0"
readme = "README.md"
version.workspace = true
edition = "2021"
rust-version = "1.70"
autobins = false


[lib]
crate-type = ["rlib"]


[dependencies]
soroban-spec = { workspace = true }
hcnet-strkey = { workspace = true }
hcnet-xdr = { workspace = true, features = ["curr", "std", "serde"] }
serde_json = { workspace = true }
itertools = { workspace = true }
ethnum = { workspace = true }
hex = { workspace = true }
wasmparser = { workspace = true }
base64 = { workspace = true }
thiserror = "1.0.31"
# soroban-ledger-snapshot = { workspace = true }
# soroban-sdk = { workspace = true }
# sep5 = { workspace = true }


[dev-dependencies]
which = { workspace = true }
tokio = "1.28.1"
