[package]
name = "test_custom_types"
version = "20.1.0"
authors = ["Hcnet Development Foundation <info@hcnet.org>"]
license = "Apache-2.0"
edition = "2021"
publish = false
rust-version = "1.70"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"]}
